# anumana

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/experiment/: week4_offline_bo.yaml
configs/optimizer/: contextual_bo.yaml
configs/scenario/: swarm_baseline.yaml
configs/tracker/: jpda.yaml
docs/: README.md  contextual_bo.md  design.md  litreview.md  research_log.md  rollout.md  strategy.md
experiments/: README.md
notebooks/: README.md
paper/: README.md  draft.md  main.tex
results/benchmark/: README.md  lean_v1.json
results/contextual_bo/: README.md  results_v2.json  results_v3.json
results/grid_pilot/: README.md  pilot.csv
results/ppo_vs_bo/: README.md  results_v1.json
results/warm_start/: README.md  gate_v1.json
scripts/: analyse_contextual_bo.py  analyse_grid.py  plot_benchmark.py  plot_ppo_vs_bo.py  run_benchmark.py  run_contextual_bo.py  run_experiment.py  run_grid.py  run_ppo_vs_bo.py  run_warm_start_gate.py
src/anumana/: __init__.py  tuner.py
src/anumana/context/: __init__.py  features.py
src/anumana/experiments/: __init__.py  grid.py
src/anumana/metrics/: __init__.py  track_quality.py
src/anumana/optimizers/: __init__.py  bayes_opt.py  contextual_bo.py  ppo_tuner.py  random_search.py  search_space.py  warm_start_bo.py
src/anumana/scenarios/: __init__.py  swarm.py
src/anumana/trackers/: __init__.py  instrumented_jpda.py
tests/: test_contextual_bo.py  test_grid.py  test_pipeline.py  test_ppo_tuner.py  test_smoke.py  test_warm_start_bo.py
