[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anumana"
version = "0.0.1"
description = "Online autotuning of multi-target trackers for saturated swarm scenarios."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Harsh Dhingra", email = "dhingrah02@gmail.com" }]
keywords = [
    "multi-target tracking",
    "bayesian optimization",
    "counter-uas",
    "swarm",
    "autotuning",
    "stone soup",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "stonesoup",
    "botorch",
    "torch",
    "numpy",
    "scipy",
    "hydra-core",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "jupyter",
    "ipykernel",
    "matplotlib",
]
rl = [
    "stable-baselines3",
    "gymnasium",
]

[project.urls]
Homepage = "https://github.com/Harsh-Dhingra/anumana"
Repository = "https://github.com/Harsh-Dhingra/anumana"
Issues = "https://github.com/Harsh-Dhingra/anumana/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anumana"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
